--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,12 +1,33 @@
 {
-	"name": "@clippium/core",
+	"name": "clippium",
 	"version": "0.0.1",
 	"description": "Command Line Interface with Powerful and Pristine Operations",
 	"keywords": [
-		"dovenv",
+		"cli",
+		"clippium",
 		"pigeonposse",
 		"pp"
 	],
+	"homepage": "https://clippium.pigeonposse.com/guide/core",
+	"bugs": {
+		"url": "https://github.com/pigeonposse/clippium/issues",
+		"email": "dev@pigeonposse.com"
+	},
+	"repository": {
+		"type": "https",
+		"url": "https://github.com/pigeonposse/clippium/",
+		"directory": "packages/core"
+	},
+	"funding": {
+		"type": "individual",
+		"url": "https://pigeonposse.com/contribute"
+	},
+	"license": "GPL-3.0",
+	"author": {
+		"name": "Angelo",
+		"email": "angelo@pigeonposse.com",
+		"url": "https://github.com/angelespejo"
+	},
 	"type": "module",
 	"exports": {
 		".": {
@@ -17,6 +38,9 @@
 	"main": "./dist/index.mjs",
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"build": "unbuild",
 		"dev": "vite dev"
@@ -27,25 +51,5 @@
 	"publishConfig": {
 		"access": "public",
 		"registry": "https://registry.npmjs.org/"
-	},
-	"homepage": "https://clippium.pigeonposse.com/guide/core",
-	"repository": {
-		"type": "https",
-		"url": "https://github.com/pigeonposse/clippium/",
-		"directory": "packages/core"
-	},
-	"license": "GPL-3.0",
-	"funding": {
-		"type": "individual",
-		"url": "https://pigeonposse.com/contribute"
-	},
-	"bugs": {
-		"url": "https://github.com/pigeonposse/clippium/issues",
-		"email": "dev@pigeonposse.com"
-	},
-	"author": {
-		"name": "Angelo",
-		"email": "angelo@pigeonposse.com",
-		"url": "https://github.com/angelespejo"
 	}
 }
