--- a/.github/workflows/release-docs.yml
+++ b/.github/workflows/release-docs.yml
@@ -10,8 +10,8 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 env:
     GITHUB_TOKEN: ${{ github.token }}
-    DOCS_ID: 'dovenv'
-    DOCS_DIR: 'packages/docs/build/docs'
+    DOCS_ID: 'clippium'
+    DOCS_DIR: 'build/docs'
     BUILD_CMD: 'pnpm build && pnpm build-doc'
 
 ###############################################################################
