--- a/packages/utils/color/package.json
+++ b/packages/utils/color/package.json
@@ -17,7 +17,7 @@
 	"repository": {
 		"type": "https",
 		"url": "https://github.com/pigeonposse/clippium/",
-		"directory": "packages/color"
+		"directory": "packages/utils/color"
 	},
 	"funding": {
 		"type": "individual",
