:sparkles: feat(all): addnew  alpha v

--- a/packages/_config/tsconfig.json
+++ b/packages/_config/tsconfig.json
@@ -6,6 +6,7 @@
 		/**
 		 * Options.
 		 */
+		"inlineSources": true,
 		"strict": true,
 		"alwaysStrict": true,
 		"strictPropertyInitialization": true,
