--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
 	},
 	"type": "module",
 	"scripts": {
-		"+": "run() { pnpm -F @*/\"${@:1}\"; }; run $@",
-		"++": "pnpm -F $@",
+		"+": "pnpm -F",
 		".": "dovenv",
 		"build": "pnpm --parallel build",
 		"build-doc": "dovenv predocs && dovenv docs build",
@@ -43,11 +42,9 @@
 		"@changesets/changelog-github": "0.5.1",
 		"@dovenv/core": "1.5.33",
 		"@dovenv/theme-pigeonposse": "1.5.33",
-		"@playwright/test": "1.53.1",
-		"@types/node": "24.0.7",
+		"@types/node": "24.0.8",
 		"eslint": "9.30.0",
 		"tslib": "2.8.1",
-		"tsx": "4.20.3",
 		"typescript": "5.8.3",
 		"unbuild": "3.5.0",
 		"vitest": "3.2.4"
