:sparkles: feat(all): change license, add docs

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"type": "individual",
 		"url": "https://pigeonposse.com/contribute"
 	},
-	"license": "GPL-3.0",
+	"license": "MIT",
 	"author": {
 		"name": "Angelo",
 		"email": "angelo@pigeonposse.com",
@@ -57,7 +57,7 @@
 	"workspace": [
 		"packages/*",
 		"packages/utils/*",
-		"packages/presets/*"
+		"packages/preset/*"
 	],
 	"extra": {
 		"id": "clippium",
