--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,3 +1,9 @@
 {
 	"extends": "./node_modules/@clippium/_config/tsconfig.json",
+	"include": [
+		"src/**/*"
+	],
+	"exclude": [
+		"**/*.example.*",
+	]
 }
