--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "clippium-toolkit",
-	"version": "0.0.4",
+	"version": "0.1.0",
 	"description": "ToolKit for working with clippium CLIs",
 	"keywords": [
 		"cli",
@@ -59,6 +59,7 @@
 		"acorn-walk": "8.3.4",
 		"clippium": "workspace:*",
 		"comment-parser": "1.4.1",
+		"creatium": "^0.1.17",
 		"generate-schema": "2.6.0",
 		"js-yaml": "4.1.0",
 		"smol-toml": "1.4.1",
