--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@clippium/schema",
-	"version": "0.0.4",
+	"version": "0.1.0",
 	"description": "ToolKit for working with clippium CLIs",
 	"keywords": [
 		"cli",
@@ -8,7 +8,7 @@
 		"pigeonposse",
 		"pp"
 	],
-	"homepage": "https://clippium.pigeonposse.com/guide/toolkit",
+	"homepage": "https://clippium.pigeonposse.com/guide/schema",
 	"bugs": {
 		"url": "https://github.com/pigeonposse/clippium/issues",
 		"email": "dev@pigeonposse.com"
