:bug: fix(all): fix types

--- a/packages/toolkit/tsconfig.json
+++ b/packages/toolkit/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "./node_modules/@clippium/_config/tsconfig.json",
 	"include": [
-		"src/**/*"
+		"src/**/*",
+		"../preset/config/src/**/*"
 	]
 }
