--- a/.dovenv/pigeonposse.yml
+++ b/.dovenv/pigeonposse.yml
@@ -18,6 +18,6 @@ web:
       - cli
       - bin
     license:
-      name: GPL-3.0
+      name: MIT
       url: https://github.com/pigeonposse/clippium/blob/main/LICENSE
     status: active
